# CS236

Project 2/: AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.h  Header.h  IDAutomaton.cpp  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.h  Relation.cpp  Relation.h  RightParenAutomaton.cpp  Rule.cpp  Rule.h  SchemesAutomaton.cpp  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Tuple.h  graph.cpp  graph.h  (+1 more)
Project 2/Lab4PassOffCases/4-80/: answer0.txt
Project1_Starter_Code/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  IDAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QMarkAutomaton.h  QueriesAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  main.cpp
Project1_Starter_Code/Lab1PassOffCases/1-70/: answer3.txt  input3.txt  inputmine.txt
